--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-git
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Мой первый сайт</title>
+</head>
+<body>
+<p>Это мой первый сайт</p>
+    
+</body>
+</html>
