--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <title>Мой первый сайт</title>
 </head>
+<script>
+function Say_Hi() {
+    alert ("Hello world")
+    
+}
+
+</script>
 <body>
 <p>Это мой первый сайт</p>
     
